--- a/styles.css
+++ b/styles.css
@@ -26,4 +26,7 @@ select {
     
 }
 
+body{
+    background-image: linear-gradient(rgb(176, 246, 255)rgb(174, 250, 224)en, rgb(229, 243, 168), rgb(252, 243, 169));
+}
 
