--- a/styles.css
+++ b/styles.css
@@ -86,7 +86,7 @@ body {
     text-align: center;
     text-decoration: underline;
     height: 20px;
-    font-size: 20px;
+    font-size: 40px;
 }
 
 .selectBox:hover{
@@ -110,4 +110,13 @@ body {
 
 .endButtons{
     text-align: center;
+}
+
+.justify-text {
+    text-align: justify;
+    margin: auto 30vw 10vh 30vw;
+}
+
+.biggerP {
+    font-size: 25px ;
 }
