--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,8 @@ header {
     margin-bottom: 30px;
     position: relative;
     text-align: center;
-    background: rgba(68, 102, 255, 0.6);
+    color: #fffcf2;
+    background: #403d39;
     border-style: solid double;
     
 }
@@ -34,7 +35,7 @@ select {
 }
 
 body {
-    background-image: linear-gradient(rgb(71, 159, 241),rgb(161, 199, 255),rgb(255, 255, 255));
+    background-color: #fffcf2;
     margin: 0%;
 }
 .grid-container {
