--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,8 @@ header {
     margin-bottom: 30px;
     position: relative;
     text-align: center;
-    background: rgba(68, 102, 255, 0.6);
+    background: #403d39;
+    color: #FFFCF2;
     border-style: solid double;
     
 }
@@ -34,9 +35,30 @@ select {
 }
 
 body {
-    background-image: linear-gradient(rgb(71, 159, 241),rgb(161, 199, 255),rgb(255, 255, 255));
+    background-color: #FFFCF2;
     margin: 0%;
 }
+
+h1 {
+
+    font-family: Avant Garde, Avantgarde, Century Gothic;
+}
+
+h2 {
+    text-align: center;
+    font-family: Avant Garde, Avantgarde, Century Gothic;
+    color: #252422;
+}
+
+button {
+    background-color: #eb5e28;
+    color: #FFFCF2;
+}
+
+button:hover {
+    background-color: #b43f11;
+}
+
 .grid-container {
     display: grid;
     grid-template-columns: auto auto;
@@ -65,7 +87,6 @@ body {
 
 .overviewTag{
     text-align: center;
-    text-decoration: underline;
     height: 70px;
     font-size: 30px;
 }   
@@ -88,6 +109,7 @@ body {
     text-decoration: underline;
     height: 20px;
     font-size: 40px;
+    font-family: Avant Garde, Avantgarde, Century Gothic;
 }
 
 .selectBox:hover{
