Updated color scheme again

--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,8 @@ header {
     margin-bottom: 30px;
     position: relative;
     text-align: center;
-    background: #403d39;
-    color: #FFFCF2;
+    background: #14213d;
+    color: #e5e5e5;
     border-style: solid double;
     
 }
@@ -17,11 +17,13 @@ footer {
     border-top: solid black 1px;
     font-size: 14px;
     text-align: center;
-    background-color: #ccc5b9;
+    background-color: #e5e5e5;
+    color #000000;
     padding: 40px;
 }
 fieldset {
     border: none;
+    background-color: #e5e5e5;
 }
 legend {
     font-size: x-large;
@@ -35,7 +37,7 @@ select {
 }
 
 body {
-    background-color: #FFFCF2;
+    background-color: #ffffff;
     margin: 0%;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-align: justify;
@@ -49,18 +51,18 @@ h1 {
 h2 {
     text-align: center;
     font-family: Avant Garde, Avantgarde, Century Gothic;
-    color: #252422;
+    color: #14213d;
 }
 
 button {
-    background-color: #eb5e28;
-    color: #FFFCF2;
+    background-color: #fca311;
+    color: #14213d;
     font-size: 18px;
     border-radius: 5px;
 }
 
 button:hover {
-    background-color: #b43f11;
+    background-color: #d28202;
     
 }
 
