--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@ button:hover {
     width: 100;
     height: 400px;
     background-color: #000000;
-    text-align: center;
+    text-align: left;
 }
 
 .grid-container {
