--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* byu blue for the ehader and adjusting text*/
 header {
     height: 80px;
     padding: 2px 2px 2px 2px;
@@ -9,15 +10,12 @@ header {
     border-style: solid double;
     line-height: normal;
 }
-
+/* placing link for the marriot school in the top right*/
 .link-button {
     float: right;
-    /* position: absolute; */
     margin-right: 4px;
     text-align: right;
-    /* display: inline; */
     padding: 27px;
-    /* width: 10px; */
     background-color: #e5e5e5;
 }
 
@@ -31,42 +29,38 @@ footer {
     font-size: 14px;
     text-align: center;
     background-color: #e5e5e5;
-    color #000000;
+    color: #000000;
     padding: 40px;
 }
-
+/* removing border of the fieldset and styling with color */
 fieldset {
     border: none;
     background-color: #e5e5e5;
     line-height: 1.5;
 }
-
+/* minor styling for the legend */
 legend {
     font-size: x-large;
     padding: 10px 0px 10px 0px;
     text-decoration: underline;
 }
-
+/*adjust width for select boxes*/
 select {
     width: 40px;
 }
-
+/*new font*/
 body {
     background-color: #ffffff;
     margin: 0%;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-align: justify;
-
     line-height: 2.5;
 }
-
+/*new font again*/
 h1 {
     font-family: Avant Garde, Avantgarde, Century Gothic;
-    /* text-align: center; */
     position: relative;
     display: inline-block;
-    /* width: 50%; */
-    /* padding-right: 0px; */
 }
 
 h2 {
@@ -84,7 +78,6 @@ button {
 
 button:hover {
     background-color: #d28202;
-    
 }
 
 .backgroundImage {
@@ -95,55 +88,28 @@ button:hover {
     background-color: #000000;
     text-align: left;
 }
-
+/*hold grid items within the container. two columns*/
 .grid-container {
     display: grid;
     grid-template-columns: auto auto;
-
     margin: auto 30vw auto 30vw;
     gap: 10px;
-    
    border-image-width: auto;
    align-content: center;
 }
-
+/*items in the grid mainly for the select boxes and checkboxes*/
 .grid-item {
     text-align: center;
     border-radius: 25px;
     }
 
-.potentialTag{
-    text-align: center;
-    text-decoration: underline;
-    height: 50px;
-    font-size: 30px;
-    }
 
-.overviewTag{
-    text-align: center;
-    height: 70px;
-    font-size: 30px;
-}   
-
-.overviewText{
-    text-align: center;
-    font-size: 20px;
-    height: 100px;
-    font-family:Verdana, Geneva, Tahoma, sans-serif
-}
-
+/* enter below text */
 .enterBelow{
     text-align: center;
     font-size: 20px;
     height: 100px; 
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-.curriculumHeader{
-    text-align: center;
-    text-decoration: underline;
-    height: 20px;
-    font-size: 40px;
-    font-family: Avant Garde, Avantgarde, Century Gothic;
 }
 
 .selectBox:hover{
@@ -164,15 +130,12 @@ button:hover {
     width: 50px;
 }
 
+/* minor adjustment for the buttons */
 .endButtons{
     text-align: center;
 }
-
+/* various places to justify text mainlly in the paragraph tags */
 .justify-text {
     text-align: justify;
     margin: auto 25vw 10vh 25vw;
-}
-
-.biggerP {
-    font-size: 25px ;
 }
